# llm-redteam-bench

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  README.md  main.py  pyproject.toml
.github/workflows/: ci.yml
configs/: attacks.yaml  judge.yaml  models.yaml  system_prompts.yaml
docs/superpowers/plans/: 2026-04-12-week1-skeleton.md  2026-04-14-week2-attack-layer.md  2026-04-16-week3-scoring-pipeline.md  2026-04-18-week4-attack-categories.md  2026-04-22-deepteam-explicit-workflow.md
docs/superpowers/specs/: 2026-04-12-week1-skeleton-design.md  2026-04-14-week2-design.md  2026-04-16-week3-scoring-pipeline-design.md  2026-04-18-week4-attack-categories-design.md  2026-04-21-real-deepteam-integration-design.md  2026-04-22-deepteam-explicit-workflow-design.md
prompts/: deepteam_llm01.txt  judge_v1.txt
scripts/: generate_prompts.py  run_all.py  run_eval.py  run_inference.py  run_pipeline.py  score_results.py
src/: config.py  pipeline.py  scripts_utils.py
src/attacks/: deepteam_attacks.py  deepteam_templates.yaml  loader.py  pyrit_attacks.py  template_attacks.py
src/attacks/manual/: llm01.txt  llm02.txt  llm04.txt  llm06.txt  llm07.txt  llm09.txt
src/inference/: client.py  hf_client.py  modal_client.py  openai_client.py
src/logging/: recorder.py
src/scoring/: judge.py  rule_based.py
tests/: test_config.py  test_deepteam_attacks.py  test_hf_client.py  test_judge.py  test_loader.py  test_modal_client.py  test_pipeline.py  test_pyrit_attacks.py  test_recorder.py  test_rule_based.py  test_scorer.py  test_template_attacks.py
